# multimodal-rag-research-finance

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  FAQ.md  GIT_SHELL_REFERENCE.md  MULTIMODAL_RAG_PLAN.md  SETUP.md
src/core/: config.py  logging.py  security.py
src/models/: schemas.py
