[tool.poetry]
name = "multimodal-rag-research-finance"
version = "0.1.0"
description = "Multimodal RAG system with visual similarity search for research papers and financial documents"
authors = ["Sudhir Shivaram <Shivaram.Sudhir@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database - Vector Search
opensearch-py = "^2.4.0"

# Database - SQL
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"

# Caching
redis = "^5.0.1"
hiredis = "^2.2.3"

# AI/ML - Embeddings
nomic = "^2.0.0"
jina-embeddings = "^0.2.0"

# AI/ML - LLMs
google-generativeai = "^0.3.2"
anthropic = "^0.7.8"
openai = "^1.6.1"

# Document Processing
PyMuPDF = "^1.23.8"
pdf2image = "^1.16.3"
pillow = "^10.1.0"

# HTTP Client
httpx = "^0.25.2"
aiohttp = "^3.9.1"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Logging & Monitoring
structlog = "^23.3.0"
python-json-logger = "^2.0.7"

# Task Queue (Airflow alternative for now)
celery = {extras = ["redis"], version = "^5.3.4"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx-mock = "^0.10.0"

# Code Quality
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"
isort = "^5.13.2"

# Type Stubs
types-redis = "^4.6.0"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"

[tool.poetry.group.airflow]
optional = true

[tool.poetry.group.airflow.dependencies]
apache-airflow = "^2.7.3"
apache-airflow-providers-postgres = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Code formatting with Black
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Linting with Ruff
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll handle complexity case by case)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# Type checking with mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "opensearchpy.*",
    "nomic.*",
    "PyMuPDF.*",
    "pdf2image.*",
]
ignore_missing_imports = true

# Testing with pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Coverage
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
